--- a/manuscript/_figure2.qmd
+++ b/manuscript/_figure2.qmd
@@ -54,10 +54,10 @@ fp1 <- grid.grabExpr(print(data |>
   fp_set_style(box = "grey50",
                line = "grey20",
                summary = "black",
-                txt_gp = fpTxtGp(label = list(gpar(cex = 0.80)),
+                txt_gp = fpTxtGp(label = list(gpar(cex = 0.80, fontfamily="Times")),
                                 ticks = gpar(cex = 0.80),
                                 xlab  = gpar(cex = 0.80)))|>
-    fp_decorate_graph(grid = structure( m.cor$TE.common,gp = gpar(lty = 2, col = "grey30")))
+    fp_decorate_graph(grid = structure( m.cor$TE.common,gp = gpar(lty = 2, col = "grey30",fontfamily="libertine")))
 )
 )
 
@@ -69,6 +69,8 @@ fp1 <- grid.grabExpr(print(data |>
 
 #ggarrange(fp1,fp2, ncol = 2, labels = c("A","B"),widths=c(2,1)) # added labels A and B
 
-gridExtra::grid.arrange(fp1)
+#gridExtra::grid.arrange(fp1)
+# libertine
+ggsave(filename = 'figure2.pdf', width = 12, height = 6, units = 'in',fp1)
 
 ```
